# MineruCustom

./: .gitignore  README.md  main.py  pyproject.toml  reprocess_discarded.py  requirements.txt  test.json
minerucustom/: __main__.py
minerucustom/core/: middle2md.py
minerucustom/tool/: content2md.py  generate_footnote_md.py  generate_page_md.py  merge_footnotes.py  model2middle.py
minerucustom/utils/: url_converter.py
src/core/: middle2content.py  middle2md.py
src/tool/: footnotes2mineru.py  generate_footnote_md.py  generate_page_md.py
src/utils/: common_utils.py  image2mineru.py  url_converter.py
